# QuantumMiner

./: .gitignore  AGENTS.md  ASSISTANT.md  JARVIS_SPEC.md  Makefile  QuantumApplication.sln  README.md  README_INSTALL.txt  build_installer.bat  codex_task_protocol.md  gpu_detect.bat  neural_object.py  python.pyproj  quantum_application.spec  requirements.txt  run_app.py
.githooks/: pre-push
Q Bit Miner/: CMakeLists.txt  README.md
Q Bit Miner/docs/: DEVICE_PROFIT_RESEARCH_GATE.md  ENGINE_HYPOTHESIS.md  quantum_miner_backbone_design.md
Q Bit Miner/include/qbit_miner/app/: application.hpp
Q Bit Miner/include/qbit_miner/cache/: substrate_cache.hpp
Q Bit Miner/include/qbit_miner/runtime/: runtime_bus.hpp  substrate_controller.hpp
Q Bit Miner/include/qbit_miner/substrate/: calibration_export.hpp  device_validation_export.hpp  field_dynamics.hpp  photonic_identity.hpp  research_calibration_importer.hpp  trace_serialization.hpp
Q Bit Miner/src/: gpu_telemetry.cpp  gpu_telemetry.h  main.cpp  photonic_api.cpp  photonic_api.h  substrate.cpp  substrate.h
Q Bit Miner/src/app/: application.cpp
Q Bit Miner/src/cache/: substrate_cache.cpp
Q Bit Miner/src/runtime/: runtime_bus.cpp  substrate_controller.cpp
Q Bit Miner/src/substrate/: calibration_export.cpp  device_validation_export.cpp  field_dynamics.cpp  research_calibration_importer.cpp  trace_serialization.cpp
Q Bit Miner/tests/: test_photonic_identity.cpp
Q Bit Miner/tests/data/: run45_import_sample.csv
ResearchConfinement/Calibrationkernals/vulkan_gpu_calibration_kernels/: CMakeLists.txt  README.md  compile_shaders.bat  compile_shaders.sh
ResearchConfinement/Calibrationkernals/vulkan_gpu_calibration_kernels/include/: pulse_types.hpp
ResearchConfinement/Calibrationkernals/vulkan_gpu_calibration_kernels/shaders/: gpu_calibration.comp  trajectory_update.comp
ResearchConfinement/Calibrationkernals/vulkan_gpu_calibration_kernels/src/: main.cpp
VHW/: __init__.py  (+39 more)
(+1474 files in other folders)
